Replaced OrbitControls.js by TrackBallControls.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/three.min.js"></script>
     <script src="js/Detector.js"></script>
     <script src="js/Stats.js"></script>
-    <script src="js/OrbitControls.js"></script>
+    <script src="js/TrackballControls.js"></script>
     <script src="js/MarchingCubesData.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/highcharts.js"></script>
