--- a/index.html
+++ b/index.html
@@ -21,10 +21,27 @@
     <div class="flex-container">
       <div class="flex-input">
         <div>
-  		    <h3>Isolevel:</h3>
+          <h3>Material:</h3>
+          <div>
+            <ul id="mat" class="materials">
+              <li><a href="#" onclick="folder='bn';  updateAll();">Boron Nitride</a></li>
+              <li><a href="#" onclick="folder='mos2';updateAll();">Mo<sub>2</sub></a></li>
+            </ul>
+          </div>
+          <h3>Isolevel:</h3>
           <form>
-            <input class="input-isolevel" type="range" name="points" step ="0.001" value="0.02" min="0.001" max="0.05" onchange="e.changeIsolevel(this.value)">
+            <input class="input-isolevel" type="range" name="points" step ="0.001" value="0.02" min="0.001" max="0.2" onchange="e.changeIsolevel(this.value)">
           </form>
+          <div>
+          <h3>Camera:</h3>
+              <button type="button" onclick="e.setCameraDirection('x')">x</button>
+              <button type="button" onclick="e.setCameraDirection('y')">y</button>
+              <button type="button" onclick="e.setCameraDirection('z')">z</button>
+          </div>
+          <div class="disclaimer">
+            <h3>Disclaimer:</h3>
+            <p>The calculations shown here are not numerically converged!</p>
+          </div>
         </div>
       </div>
       <div class="flex-excitonwf"><div id="excitonwf"></div></div>
