--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div>
             <ul id="mat" class="materials">
               <li><a href="#" onclick="folder='bn';  updateAll();">Boron Nitride</a></li>
-              <li><a href="#" onclick="folder='mos2';updateAll();">Mo<sub>2</sub></a></li>
+              <li><a href="#" onclick="folder='mos2';updateAll();">MoS<sub>2</sub></a></li>
             </ul>
           </div>
           <h3>Isolevel:</h3>
@@ -37,6 +37,11 @@
               <button type="button" onclick="e.setCameraDirection('x')">x</button>
               <button type="button" onclick="e.setCameraDirection('y')">y</button>
               <button type="button" onclick="e.setCameraDirection('z')">z</button>
+          </div>
+          <div>
+            <h3>Instructions:</h3>
+            <p>Click on a point in the absorption spectra close to the vertical lines to obtain the excitonic
+              wavefunction of the exciton with that energy</p>
           </div>
           <div class="disclaimer">
             <h3>Disclaimer:</h3>
