Removed MoS2 because the convergence criteria are to low

--- a/exciton.html
+++ b/exciton.html
@@ -30,7 +30,7 @@
           <div>
             <ul id="mat" class="materials">
               <li><a href="#" onclick="folder='bn';   updateAll(); $('#t1').html('Boron Nitride')">Boron Nitride</a></li>
-              <li><a href="#" onclick="folder='mos2'; updateAll(); $('#t1').html('MoS<sub>2</sub>')">MoS<sub>2</sub></a></li>
+              <!--<li><a href="#" onclick="folder='mos2'; updateAll(); $('#t1').html('MoS<sub>2</sub>')">MoS<sub>2</sub></a></li>-->
               <li><a href="#" onclick="folder='mote2';updateAll(); $('#t1').html('MoTe<sub>2</sub>')">MoTe<sub>2</sub></a></li>
             </ul>
           </div>
