--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header>
 	<ul class="navigation">
 		<li><a href="index.html">Home</a></font></li>
-		<li><a href="exciton.html">Phonons</a></font></li>
+		<li><a href="exciton.html">Excitons</a></font></li>
 	</ul>
 </header>
 
