--- a/exciton.html
+++ b/exciton.html
@@ -13,8 +13,9 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/highcharts.js"></script>
     <script src="js/atomic_data.js"></script>
+    <script src="js/excitonwf.js"></script>
     <script src="js/exciton.js"></script>
-
+    <script src="js/absorptionspectra.js"></script>
 </head>
 <body>
     <div class="container">
